# BackgroundRemover

./: .gitignore  BackgroundRemover.code-workspace  README.md  launch-gui-windows.bat  pyproject.toml
docs/: aseprite-background-removal-prd.md  aseprite-read-write-spike.md  cli-implementation-plan.md  color-key-assist.md  development.md  gui-implementation-plan.md  gui-prd.md  manual-cleanup-notes.md  metadata-and-layer-policy.md  model-quality-notes.md
images/: sprite.aseprite
src/background_remover/: __init__.py  aseprite.py  background.py  cli.py  color_key.py  mask_cleanup.py  processing.py  reporting.py
src/background_remover/gui/: __init__.py  __main__.py  app.py  command_preview.py  input_loader.py  main_window.py  model_metadata.py  output_paths.py  processing_options.py  settings.py  theme.py  worker.py
tests/: test_aseprite_writer.py  test_background.py  test_cli.py  test_color_key.py  test_gui.py  test_mask_cleanup.py  test_processing.py  test_reporting.py
